# ChangeLog for dev-ruby/ruby-gettext
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.138 2014/07/21 14:55:39 klausman Exp $

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  ruby-gettext-3.1.1.ebuild:
  Stable on alpha, bug #505920

  14 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ruby-gettext-3.1.2.ebuild:
  x86 stable wrt bug #505920

  18 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
  ruby-gettext-3.1.2.ebuild:
  Keyworded on alpha, bug #505920

  17 Jun 2014; Hans de Graaff <graaff@gentoo.org> ruby-gettext-2.3.8.ebuild:
  Add dependency on a compatible version of dev-ruby/rake. Simplify running the
  tests in an attempt to fix bug 513480.

  14 Jun 2014; Hans de Graaff <graaff@gentoo.org> ruby-gettext-2.3.3.ebuild,
  ruby-gettext-2.3.8.ebuild:
  Change dev-ruby/locale dependencies to locale 2.0.5 since only that version
  provides memoizable, fixing bug 512320.

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org> ruby-gettext-3.1.1.ebuild:
  Stable for HPPA (bug #505920).

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> ruby-gettext-3.1.1.ebuild:
  ia64 stable wrt bug #505920

  01 Jun 2014; Markus Meier <maekke@gentoo.org> ruby-gettext-3.1.1.ebuild:
  arm stable, bug #505920

*ruby-gettext-3.1.2 (03 May 2014)

  03 May 2014; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-3.1.2.ebuild:
  Version bump.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> ruby-gettext-2.3.3.ebuild,
  ruby-gettext-2.3.8.ebuild, ruby-gettext-3.1.1.ebuild:
  Remove ree18 and ruby18 target.

  27 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-gettext-2.2.1.ebuild,
  -ruby-gettext-3.0.3.ebuild, -ruby-gettext-3.0.6.ebuild,
  -ruby-gettext-3.1.0.ebuild:
  Cleanup old.

*ruby-gettext-3.1.1 (25 Feb 2014)

  25 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +ruby-gettext-3.1.1.ebuild:
  Version bump.

*ruby-gettext-3.1.0 (10 Feb 2014)
