@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.138 2014/07/21 14:55:39 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.139 2014/07/31 07:50:32 graaff Exp $
+
+*ruby-gettext-3.1.3 (31 Jul 2014)
+
+  31 Jul 2014; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-3.1.3.ebuild:
+  Version bump. Install missing locale files. Add ruby21.
 
   21 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
   ruby-gettext-3.1.1.ebuild:
